--- a/CES2013/res/layout/featured_row.xml
+++ b/CES2013/res/layout/featured_row.xml
@@ -1,14 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/featured_list"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="150dp"
     android:orientation="horizontal">
     
 	<com.loopj.android.image.SmartImageView
 	    android:id="@+id/featured_row_thumbnail"
-	    android:layout_width="64dp"
-	    android:layout_height="wrap_content"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
 	    android:layout_gravity="center_vertical"
+	    android:scaleType="centerCrop"
 	    android:contentDescription="@string/image" />
         
     <TextView 
@@ -16,7 +17,6 @@
         android:textSize="24sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
         android:layout_gravity="center_vertical" />    
         
 </LinearLayout>
