--- a/CES2013/res/values/styles.xml
+++ b/CES2013/res/values/styles.xml
@@ -16,6 +16,7 @@
     <style name="AppTheme" parent="@android:style/Theme.Holo">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
     
 	<!-- Action bar. -->
