--- a/CES2013/res/layout/fragment_featured.xml
+++ b/CES2013/res/layout/fragment_featured.xml
@@ -3,38 +3,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background">
-        
-    <LinearLayout
-        android:id="@+id/content_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:orientation="vertical"
-        android:visibility="gone">
     
-		<android.support.v4.view.ViewPager
-	        android:id="@+id/carousel_view_pager"
-	        android:layout_width="match_parent" 
-	        android:layout_height="200dp" />
-		
-		<TextView 
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginTop="25dp"
-		    android:layout_marginLeft="10dp"
-		    android:textColor="#ffffff"
-		    android:textSize="20sp"
-		    android:text="@string/related" />
-		
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+	    <LinearLayout
+	        android:id="@+id/content_container"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" 
+	        android:orientation="vertical"
+	        android:visibility="gone">
 	    
-		<GridView 
-		    android:id="@+id/featured_list"
-		    android:layout_width="match_parent"
-		    android:layout_height="match_parent"
-		    android:numColumns="3"
-		    android:horizontalSpacing="10dp"
-		    android:verticalSpacing="10dp" />
+			<com.digiflare.ces2013.ui.UninterceptableViewPager
+		        android:id="@+id/carousel_view_pager"
+		        android:layout_width="match_parent" 
+		        android:layout_height="200dp" />
+			
+			<TextView 
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_marginTop="15dp"
+			    android:layout_marginLeft="10dp"
+			    android:textColor="#ffffff"
+			    android:textSize="20sp"
+			    android:text="@string/related" />
+			
 		    
-	</LinearLayout>
+			<!-- <GridView 
+			    android:id="@+id/featured_list"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:numColumns="3"
+			    android:horizontalSpacing="10dp"
+			    android:verticalSpacing="10dp" /> -->
+			    
+		</LinearLayout>
+	</ScrollView>
 	
 	<ProgressBar
 	    android:id="@+id/progress"
