--- a/CES2013/res/layout/fragment_featured.xml
+++ b/CES2013/res/layout/fragment_featured.xml
@@ -21,6 +21,7 @@
 		        android:layout_height="200dp" />
 			
 			<TextView 
+			    android:id="@+id/fragment_type"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginTop="15dp"
