--- a/CES2013/res/values/styles.xml
+++ b/CES2013/res/values/styles.xml
@@ -15,12 +15,7 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="@android:style/Theme.Holo">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:actionBarStyle">@android:style/Widget.Holo.ActionBar</item>
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
-    
-	<!-- Action bar. -->
-    <style name="MyActionBar" parent="@android:style/Widget.Holo.ActionBar">
-        <item name="android:background">@drawable/topbar</item>
-	</style>
 </resources>
