--- a/CES2013/res/layout/title_bar.xml
+++ b/CES2013/res/layout/title_bar.xml
@@ -6,6 +6,6 @@
     <ImageView
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:src="@drawable/topbar"
+		android:id="@+id/title_bar_image"
 		android:scaleType="fitXY"/>
 </RelativeLayout>
